reads images in b64 from user

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         </canvas>
         <div class="controls">
+            <input type="file" onchange="encodeImageFileAsURL(this)" />
             <label for="res" id="reslabel">Resolution</label>
             <input type="range" name="res" id="res" min="1" max="50" value="5">
         </div>
