--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div class="controls">
             <input type="file" onchange="encodeImageFileAsURL(this)" />
             <label for="res" id="reslabel">Resolution</label>
-            <input type="range" name="res" id="res" min="1" max="50" value="5">
+            <input type="range" name="res" id="res" min="1" max="20" value="5">
+            <input type="checkbox" name="color" id="color">
+            <label for="color">Include colors</label>
         </div>
     </div>
     <script src="index.js"></script>
